--- a/data4good/index.html
+++ b/data4good/index.html
@@ -47,6 +47,10 @@
             us</a>
         </li>
         <li class="pr-2">
+          <a href="./events.html"
+            class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Events</a>
+        </li>
+        <li class="pr-2">
           <a href="./photos.html"
             class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Photos 📸</a>
         </li>
@@ -77,6 +81,10 @@
         <a href="#about" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About us</a>
       </li>
       <li class="pr-2">
+        <a href="./events.html"
+          class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Events</a>
+      </li>
+      <li class="pr-2">
         <a href="./photos.html"
           class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Photos 📸</a>
       </li>
@@ -91,8 +99,7 @@
     style="margin-top:80px">
     <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-2 lg:items-start">
       <h1 class="mt-2 mb-4 font-medium">
-        The first data4good Hackathon
-      </h1>
+        data4good Vienna </h1>
       <span>
         Organised by &nbsp; &nbsp;
         <a href="https://viennadatasciencegroup.at/" target="_blank"
@@ -110,31 +117,34 @@
     </div>
   </section>
   <!-- Upcoming events -->
-  <section class="mb-2 font-sans container max-w-xl mx-auto px-6 " data-aos="fade-up" style="font-size: 1.1em">
+  <section class="mb-2 font-sans container max-w-xl mx-auto px-6" data-aos="fade-up" style="font-size: 1.1em">
     <br>
     <br>
     <h3> Upcoming events</h3> <br>
-    <p> 1) HW Int's Helmut Gaffl will present their project at the Technologieplauscherl in Linz <a
+    <p> <b>June 28, 2019</b> - HW Int's Helmut Gaffl will present their project at the Technologieplauscherl in Linz <a
         href="http://technologieplauscherl.at/" target="_blank">http://technologieplauscherl.at</a> </p>
     <br>
-    <p>2) The GrünStattGrau team is presenting at the NLP Meetup <a
+  </section>
+  <!-- Past events-->
+  <section class="mb-2 font-sans container max-w-xl mx-auto px-6  border-t" style="font-size: 1.1em">
+    <br>
+    <br>
+    <h3> Past events</h3> <br>
+    <p> <b>June 4, 2019</b> - We presented a summary of the Hackathon and results, with then a spotlight on the Smart
+      Cities Project, at
+      the Wirtschaftsagentur Wien: <a href="./events.html" target="_blank">more details and slides</a> </p>
+    <br>
+    <p><b>May 28, 2019</b> - The GrünStattGrau team is presenting at the NLP Meetup <a
         href="https://www.meetup.com/nlp-vienna/events/261452867/"
         target="_blank">https://www.meetup.com/nlp-vienna/events/261452867/</a> </p>
     <br>
-    <p> 3) We will present a summary of the Hackathon and results, with then a spotlight on the Smart
-      Cities Project, at
-      the Wirtschaftsagentur Wien: <a
-        href="https://wirtschaftsagentur.at/veranstaltungen/business-treff-socialtech-data4good-893/"
-        target="_blank">https://wirtschaftsagentur.at/veranstaltungen/business-treff-socialtech-data4good-893/</a> </p>
-    <br>
+
   </section>
   <!-- About the hackathon -->
   <section class="mb-8 font-sans container max-w-xl mx-auto flex flex-col md:flex-row sm:items-start border-b">
-    <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-0 md:py-8 md:px-8 lg:items-start">
-      <h3> Past events</h3><br>
+    <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-0 md:py-8 md:px-6 lg:items-start">
+      <h3> April 27-28, 2019 - Our first hackathon</h3><br>
       <p class="mb-4">
-        Our first hackathon<br />
-        When: April 27-28, 2019 <br />
         Where: A1 Telekom Austria Group office building, Lassallestraße 9
       </p>
       <p class="leading-normal mb-4">
