--- a/data4good/challengeTemplate.html
+++ b/data4good/challengeTemplate.html
@@ -1,186 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="./css/taylwind.css" rel="stylesheet" />
-    <link
-    href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900
-    rel="stylesheet"> <link rel="stylesheet"
-    href=https://use.fontawesome.com/releases/v5.6.3/css/all.css
-    integrity=sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/aos.css" />
-    <link rel="icon" href="./img/logo2.png" />
-    <title>data4good</title>
-  </head>
-  <body>
-    <section
-      class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
-    >
-      <div class="w-full lg:w-1/2">
-        <img
-          src="https://images.unsplash.com/photo-1451903978882-b165bd94e45d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-          alt=""
-        />
-      </div>
-      <div
-        class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      >
-        <label
-          for="tagline"
-          class="uppercase tracking-wide text-grey-dark font-bold"
-          >best app ever</label
-        >
-        <h1 class="my-4 font-normal">Our Work Flow</h1>
-        <p class="leading-normal mb-4 text-grey-dark">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="./css/taylwind.css" rel="stylesheet" />
+  <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
+  <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.6.3/css/all.css
+    integrity=sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/ crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/aos.css" />
+  <link rel="icon" href="./img/logo2.png" />
+  <title>data4good</title>
+</head>
+
+<body>
+  <section
+    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2">
+      <img
+        src="https://images.unsplash.com/photo-1451903978882-b165bd94e45d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+        alt="" />
+    </div>
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+      <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">best app ever</label>
+      <h1 class="my-4 font-normal">Our Work Flow</h1>
+      <p class="leading-normal mb-4 text-grey-dark">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </div>
+  </section>
+  <section
+    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+      <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">best app ever</label>
+      <h1 class="my-4 font-normal">Our Work Flow</h1>
+      <p class="leading-normal mb-4 text-grey-dark">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </div>
+    <div class="w-full lg:w-1/2">
+      <img
+        src="https://images.unsplash.com/photo-1451903978882-b165bd94e45d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+        alt="" />
+    </div>
+  </section>
+  <section class="font-sans container m-auto flex flex-col py-8 max-w-xl text-center px-6">
+    <label class="text-sm uppercase">20 Month 2019</label>
+    <h1 class="my-8 max-w-full m-auto text-3xl md:text-4xl lg:text-5xl font-medium">
+      Lorem Ipsum is simply dummy text of the printing
+    </h1>
+    <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
+      Contrary to popular belief, Lorem Ipsum is not simply random text. It
+      has roots in a piece of classical Latin literature from 45 BC, making it
+      over 2000 years old. Richard McClintock, a Latin professor at
+      Hampden-Sydney College in Virginia, looked up one of the more obscure
+      Latin words, consectetur, from a Lorem Ipsum passage, and going through
+      the cites of the word in classical literature, discovered the
+      undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33
+      of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by
+      Cicero, written in 45 BC. This book is a treatise on the theory of
+      ethics, very popular during the Renaissance. The first line of Lorem
+      Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section
+      1.10.32.
+    </p>
+    <p class="max-w-lg m-auto leading-loose mb-6 text-left">
+      The standard chunk of Lorem Ipsum used since the 1500s is reproduced
+      below for those interested. Sections 1.10.32 and 1.10.33 from "de
+      Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact
+      original form, accompanied by English versions from the 1914 translation
+      by H. Rackham.
+    </p>
+  </section>
+
+  <footer id="about" class="font-sans bg-white py-8 px-4">
+    <div
+      class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
+      <a href="https://viennadatasciencegroup.at/data4good/" class="block mr-4 w-full md:w-1/4"
+        style="text-decoration: none; color: black; text-align: center">
+        <img src="./img/logo2.png" class="h-8 sm:h-8 rounded-full" alt="logo" />
+        <br />
+        <span class="" style="font-size: 1.35rem;">
+          data4good
+        </span>
+      </a>
+
+      <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
+        <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
+        <p>
+          Rapid advances in Artificial Intelligence and data processing
+          technologies are having a deep impact on society.This has triggered
+          a certain amount of media hype about the opportunities and risks
+          behind this profound transformation. The data4good Hackathon aims to
+          close the gap between buzz and knowledge, paving the path for NGOs,
+          newbies, and practitioners to put AI’s promise to practice, and
+          learn first-hand how to deal with both its advantages and its
+          shortcomings.
         </p>
       </div>
-    </section>
-    <section
-      class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center"
-    >
-      <div
-        class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
-      >
-        <label
-          for="tagline"
-          class="uppercase tracking-wide text-grey-dark font-bold"
-          >best app ever</label
-        >
-        <h1 class="my-4 font-normal">Our Work Flow</h1>
-        <p class="leading-normal mb-4 text-grey-dark">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-      </div>
-      <div class="w-full lg:w-1/2">
-        <img
-          src="https://images.unsplash.com/photo-1451903978882-b165bd94e45d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-          alt=""
-        />
-      </div>
-    </section>
-    <section
-      class="font-sans container m-auto flex flex-col py-8 max-w-xl text-center px-6"
-    >
-      <label class="text-sm uppercase">20 Month 2019</label>
-      <h1
-        class="my-8 max-w-full m-auto text-3xl md:text-4xl lg:text-5xl font-medium"
-      >
-        Lorem Ipsum is simply dummy text of the printing
-      </h1>
-      <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It
-        has roots in a piece of classical Latin literature from 45 BC, making it
-        over 2000 years old. Richard McClintock, a Latin professor at
-        Hampden-Sydney College in Virginia, looked up one of the more obscure
-        Latin words, consectetur, from a Lorem Ipsum passage, and going through
-        the cites of the word in classical literature, discovered the
-        undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33
-        of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by
-        Cicero, written in 45 BC. This book is a treatise on the theory of
-        ethics, very popular during the Renaissance. The first line of Lorem
-        Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section
-        1.10.32.
-      </p>
-      <p class="max-w-lg m-auto leading-loose mb-6 text-left">
-        The standard chunk of Lorem Ipsum used since the 1500s is reproduced
-        below for those interested. Sections 1.10.32 and 1.10.33 from "de
-        Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact
-        original form, accompanied by English versions from the 1914 translation
-        by H. Rackham.
-      </p>
-    </section>
-
-    <footer id="about" class="font-sans bg-white py-8 px-4">
-      <div
-        class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left"
-      >
-        <a
-          href="https://viennadatasciencegroup.at/data4good/"
-          class="block mr-4 w-full md:w-1/4"
-          style="text-decoration: none; color: black; text-align: center"
-        >
-          <img
-            src="./img/logo2.png"
-            class="h-8 sm:h-8 rounded-full"
-            alt="logo"
-          />
-          <br />
-          <span class="" style="font-size: 1.35rem;">
-            data4good
-          </span>
-        </a>
-
-        <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
-          <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
-          <p>
-            Rapid advances in Artificial Intelligence and data processing
-            technologies are having a deep impact on society.This has triggered
-            a certain amount of media hype about the opportunities and risks
-            behind this profound transformation. The data4good Hackathon aims to
-            close the gap between buzz and knowledge, paving the path for NGOs,
-            newbies, and practitioners to put AI’s promise to practice, and
-            learn first-hand how to deal with both its advantages and its
-            shortcomings.
-          </p>
-        </div>
-        <div
-          class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0"
-        >
-          <h4
-            class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest"
-          >
-            Follow Us
-          </h4>
-          <div class="flex pl-0 md:pl-4 justify-start text-3xl">
-            <a
-              class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline"
-              href="https://www.meetup.com/de-DE/Vienna-Data-Science-Group-Meetup/"
-              target="_blank"
-              ><i class="fab fa-meetup"></i
-            ></a>
-            <a
-              class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline"
-              href="https://twitter.com/ViennaDSG"
-              target="_blank"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a
-              class="block flex items-center text-grey-darkest hover:text-black no-underline"
-              href="https://www.youtube.com/channel/UC6QK4pOaKBmPRwGCFLYklLA"
-              target="_blank"
-              ><i class="fab fa-youtube"></i
-            ></a>
-          </div>
+      <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
+        <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">
+          Follow Us
+        </h4>
+        <div class="flex pl-0 md:pl-4 justify-start text-3xl">
+          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline"
+            href="https://www.meetup.com/de-DE/Vienna-Data-Science-Group-Meetup/" target="_blank"><i
+              class="fab fa-meetup"></i></a>
+          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline"
+            href="https://twitter.com/ViennaDSG" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a class="block flex items-center text-grey-darkest hover:text-black no-underline"
+            href="https://www.youtube.com/channel/UC6QK4pOaKBmPRwGCFLYklLA" target="_blank"><i
+              class="fab fa-youtube"></i></a>
         </div>
       </div>
-      <div
-        class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"
-      >
-        ©2019 Vienna Data Science Group. All rights reserved. Webdesign &
-        development
-        <a href="https://trendydots.com/me/" target="_blank">
-          Cristian-Dan Bara</a
-        >
-      </div>
-    </footer>
+    </div>
+    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center">
+      ©2019 Vienna Data Science Group. All rights reserved. Webdesign &
+      development
+      <a href="https://trendydots.com/me/" target="_blank">
+        Cristian-Dan Bara</a>
+    </div>
+  </footer>
 
-    <script src="./js/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-    <script>
-      function menuToggle() {
-        document.querySelector("#navMenu").classList.toggle("hidden");
-      }
-      document
-        .querySelector("#navButton")
-        .addEventListener("click", menuToggle);
-    </script>
-  </body>
+  <script src="./js/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <script>
+    function menuToggle() {
+      document.querySelector("#navMenu").classList.toggle("hidden");
+    }
+    document
+      .querySelector("#navButton")
+      .addEventListener("click", menuToggle);
+  </script>
+</body>
+
 </html>
