--- a/data4good/events.html
+++ b/data4good/events.html
@@ -64,8 +64,11 @@
     </ul>
   </div>
 
-  <section style="margin-top: 70px"
-    class="my-8 font-sans container max-w-xl m-auto flex flex-col text-center sm:items-center h-auto">
+  <!-- spacer section-->
+  <section style="margin-top: 20px"> &nbsp; </section>
+
+  <!-- JUNE 4, 2019 -->
+  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col text-center sm:items-center h-auto">
 
     <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
       <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">June 4, 2019</label>
@@ -78,6 +81,7 @@
         <br> <br> Below you can see the presentation from the event.
       </p>
     </div>
+    <!-- 1 -->
     <div class="w-full lg:w-2/3 min-h-700">
       <object data="./misc/WAW_04062019.pdf" class="w-full" style="min-height: 500px" alt="pdf" type="application/pdf">
       </object>
@@ -88,11 +92,107 @@
       <br>
       <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
         style="text-decoration: none;" href="./misc/WAW_04062019.pdf" download>Download PDF</a>
+    </div>
+
+    <!-- 2 -->
+    <div class="w-full lg:w-2/3 min-h-700">
+      <object data="./misc/data4good-HO-Presentation.pdf" class="w-full" style="min-height: 500px" alt="pdf"
+        type="application/pdf">
+      </object>
+    </div>
+
+    <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
+      <h3 class="font-medium">Download the presentation</h3>
+      <br>
+      <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
+        style="text-decoration: none;" href="./misc/data4good-HO-Presentation.pdf" download>Download PDF</a>
+    </div>
+
+    <!-- 3 -->
+    <div class="w-full lg:w-2/3 min-h-700">
+      <object data="./misc/06_Victor-Perez_CivesSolutions.pdf" class="w-full" style="min-height: 500px" alt="pdf"
+        type="application/pdf">
+      </object>
+    </div>
+
+    <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
+      <h3 class="font-medium">Download the presentation</h3>
+      <br>
+      <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
+        style="text-decoration: none;" href="./misc/06_Victor-Perez_CivesSolutions.pdf" download>Download PDF</a>
+    </div>
+
+    <!-- 4 -->
+    <div class="w-full lg:w-2/3 min-h-700">
+      <object data="./misc/03_Denise-Recheis_REEEP.pdf" class="w-full" style="min-height: 500px" alt="pdf"
+        type="application/pdf">
+      </object>
+    </div>
+
+    <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
+      <h3 class="font-medium">Download the presentation</h3>
+      <br>
+      <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
+        style="text-decoration: none;" href="./misc/03_Denise-Recheis_REEEP.pdf" download>Download PDF</a>
+    </div>
+
+    <!-- 5 -->
+    <div class="w-full lg:w-2/3 min-h-700">
+      <object data="./misc/02_Scott-Fertig_VDSG.pdf" class="w-full" style="min-height: 500px" alt="pdf"
+        type="application/pdf">
+      </object>
+    </div>
+
+    <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
+      <h3 class="font-medium">Download the presentation</h3>
+      <br>
+      <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
+        style="text-decoration: none;" href="./misc/02_Scott-Fertig_VDSG.pdf" download>Download PDF</a>
+    </div>
+
+    <!-- 6 -->
+    <div class="w-full lg:w-2/3 min-h-700">
+      <object data="./misc/08_Matthias-Weichhart.pdf" class="w-full" style="min-height: 500px" alt="pdf"
+        type="application/pdf">
+      </object>
+    </div>
+
+    <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
+      <h3 class="font-medium">Download the presentation</h3>
+      <br>
+      <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
+        style="text-decoration: none;" href="./misc/08_Matthias-Weichhart.pdf" download>Download PDF</a>
+    </div>
+  </section>
+
+  <!-- MAY 23, 2019 -->
+  <section style="margin-top: 70px"
+    class="my-8 font-sans container max-w-xl m-auto flex flex-col text-center sm:items-center h-auto">
+
+    <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
+      <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">MAY 23, 2019</label>
+      <h1 class="my-4 font-normal">Technologieplauscherl</h1>
+      <p class="leading-normal mb-4 text-grey-dark">
+        HW Int's Helmut Gaffl presented their project at the Technologieplauscherl in Linz <a
+          href="http://technologieplauscherl.at" target="_blank">http://technologieplauscherl.at</a>
+        <br> <br> Below you can see the presentations from the event.
+      </p>
+    </div>
+    <div class="w-full lg:w-2/3 min-h-700">
+      <object data="./misc/HW_Int_Technologieplauscherl_23052019.pdf" class="w-full" style="min-height: 500px" alt="pdf"
+        type="application/pdf">
+      </object>
+    </div>
+
+    <div class="w-full lg:w-2/3 flex flex-col justify-center p-8 items-center">
+      <h3 class="font-medium">Download the presentation</h3>
+      <br>
+      <a class="bg-black hover:bg-grey-darkest text-white hover:text-white py-3 px-6 uppercase text-xs tracking-wide"
+        style="text-decoration: none;" href="./misc/HW_Int_Technologieplauscherl_23052019.pdf" download>Download PDF</a>
 
     </div>
 
   </section>
-
 
   <footer id="about" class="font-sans bg-white py-8 px-4">
     <div
