--- a/data4good/index.html
+++ b/data4good/index.html
@@ -117,6 +117,7 @@
     </div>
   </section>
   <!-- Upcoming events -->
+  <!-- 
   <section class="mb-2 font-sans container max-w-xl mx-auto px-6" data-aos="fade-up" style="font-size: 1.1em">
     <br>
     <br>
@@ -125,19 +126,23 @@
         href="http://technologieplauscherl.at/" target="_blank">http://technologieplauscherl.at</a> </p>
     <br>
   </section>
+  -->
   <!-- Past events-->
   <section class="mb-2 font-sans container max-w-xl mx-auto px-6  border-t" style="font-size: 1.1em">
     <br>
     <br>
     <h3> Past events</h3> <br>
-    <p> <b>June 4, 2019</b> - We presented a summary of the Hackathon and results, with then a spotlight on the Smart
+    <p><b>June 4, 2019</b> - We presented a summary of the Hackathon and results, with then a spotlight on the Smart
       Cities Project, at
       the Wirtschaftsagentur Wien: <a href="./events.html" target="_blank">more details and slides</a> </p>
     <br>
-    <p><b>May 28, 2019</b> - The GrünStattGrau team is presenting at the NLP Meetup <a
+    <p><b>May 28, 2019</b> - The GrünStattGrau team presented at the NLP Meetup <a
         href="https://www.meetup.com/nlp-vienna/events/261452867/"
         target="_blank">https://www.meetup.com/nlp-vienna/events/261452867/</a> </p>
     <br>
+    <p><b>May 23, 2019</b> - HW Int's Helmut Gaffl presented their project at the Technologieplauscherl in Linz <a
+        href="./events.html" target="_blank">more details and slides</a>
+      <br>
 
   </section>
   <!-- About the hackathon -->
