--- a/datajournalism/pt/project.html
+++ b/datajournalism/pt/project.html
@@ -45,7 +45,8 @@
   </script>
 </head>
 
-<body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact">
+<body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" data-aos-easing="ease" data-aos-delay="300"
+  data-aos="fade-in">
   <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100;
@@ -59,6 +60,12 @@
         <span style="color: #1976D2; display: inline; text-indent: 0.2em">journalism </span>
       </b>
     </span>
+    <div>
+      <a href="https://www.patreon.com/bePatron?u=14590376" data-patreon-widget-type="become-patron-button"
+        data-aos="fade-in">Become a
+        Patron!</a>
+    </div>
+
     <ul class="text-sm text-grey-dark list-reset flex items-center">
 
       <li>
