--- a/project.html
+++ b/project.html
@@ -131,31 +131,31 @@
       <h2 class="my-4 font-medium">Projects we're proud of</h2>
     </div>
     <div class="flex flex-col sm:flex-row flex-wrap my-8">
-      <div
+      <a target="_blank" href="https://trendydots.com/oskar/" style="text-decoration: none; color:black;"
         class="w-full sm:w-full md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
         <img src="./osk.png" style="height: 2em" alt="">
         <h3 class="mt-4 mb-1">Oskar</h3>
         <p class="mt-4 text-center text-grey-dark leading-normal">Oskar is our latest AI experiment which we hope will
           recommend the proper attire for the proper occasion. </p>
-      </div>
+      </a>
 
-      <div
+      <a target="_blank" href="https://trendydots.com/invest/project" style="text-decoration: none; color:black;"
         class="w-full sm:w-full md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
         <img src="./tdmr.png" style="height: 2em" alt="">
         <h3 class="mt-4 mb-1"><i>"it links the links"</i></h3>
         <p class="mt-4 text-center text-grey-dark leading-normal px-6"> Our market research platform offers standard
           reporting containing insights into company shares, indices, commodities, cryptocurrencies and world events.
         </p>
-      </div>
+      </a>
 
-      <div
+      <a target="_blank" href="https://trendydots.com/data4good/" style="text-decoration: none; color:black;"
         class="w-full sm:w-full md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
         <img src="./d4g.png" style="height: 2em" alt="">
         <h3 class="mt-4 mb-1">Data for good </h3>
         <p class="mt-4 text-center text-grey-dark leading-normal">Interdisciplinary teams of data scientists, developers
           and designers working together with domain experts from NGOs and social enterprises to create new insight
           about their work, solve complex challenges and identify new social impact opportunities.</p>
-      </div>
+      </a>
     </div>
   </section>
 
